[package]
name = "aspen-engine"
version = "0.1.12"
edition = "2021"
license = "MIT"
description = "https://docs.rs/aspen-engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msgbox = "0.7.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
vulkano = { version = "0.34.1", features = ["macros"] }
vulkano-shaders = "0.34.0"
winit = { version = "0.29.9", features = ["rwh_05"] }
